# simple-remote-notify-send

./: .gitignore  CMakeLists.txt  PosturePerfection_receiver.cpp  PosturePerfection_test_broadcast.cpp  README.md  RemoteNotify.cpp  RemoteNotify.h  RemoteNotifyBroadcast.cpp  RemoteNotifyBroadcast.h  RemoteNotifyReceive.cpp  RemoteNotifyReceive.h  build.sh  local_posture_perfection_example.cpp  package.yaml  receiver.cpp  receiver.h
.github/workflows/: main.yaml  package.yaml
Examples/PosturePerfection/: CMakeLists.txt  PosturePerfectionLocalReceiver  PosturePerfection_receiver.cpp  PosturePerfection_receiver_deb_version.cpp  PosturePerfection_test_broadcast.cpp
Examples/PosturePerfection/debPackage/: PosturePerfectionReceiver_1.0_amd64.deb
Examples/PosturePerfection/debPackage/PosturePerfectionReceiver_1.0_amd64/DEBIAN/: control
debPackages/: CONTROL_AMD64  CONTROL_ARMHF
